# Lab3_Josmymol_Joseph

./: README.md  pyproject.toml  train.py
app/: main.py
app/data/: meta.json
